# sand

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.c.C0DF59FD45913792.idx
src/: main.c
src/element/: element.c  element.h  element_get_list.c
src/game/: game.c  game.h  game_element_switcheroo.c
src/grain/: grain.c  grain.h
src/ui/: button.c  hover.c  rects.c  text.c  ui.h
src/utils/: utils.c  utils.h
